@@ -878,10 +878,11 @@ void TestClient::dataAvailable(const MagneticField&)
 {
     QTime now = QTime::currentTime();
     qDebug() << "dataAvailable() "
-             << ++dataCount << " in "
+             << dataCount << " in "
              << (dataCount > -1 ? m_exTimeData.msecsTo(now) : 0)
              << " ms" ;
     m_exTimeData = now;
+    ++dataCount;
 }
 
 void TestClient::frameAvailable(const QVector<MagneticField>& frame)
@@ -901,11 +902,12 @@ void TestClient::dataAvailable2(const XYZ&)
 {
     QTime now = QTime::currentTime();
     qDebug() << "dataAvailable() "
-             << ++dataCount
+             << dataCount
              << " in "
              << (dataCount > -1 ? m_exTimeData.msecsTo(now) : 0)
              << " ms";
     m_exTimeData = now;
+    ++dataCount;
 }
 
 void TestClient::frameAvailable2(const QVector<XYZ>& frame)
